# playwrigttutorial

./: .gitignore  README.md  pyproject.toml  pytest.ini  test-1.py
.github/workflows/: playwright-tests.yml
pages/: base_page.py  todo_page.py
tests/: conftest.py
tests/e2e/: test_todo_workflow.py
tests/todos/: test_todo_completion.py  test_todo_creation.py  test_todo_editing.py  test_todo_filters.py
utils/: assertions.py  constants.py  test_data.py
